fix liq errors update gitignore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,28 @@
 services:
+  icecast:
+    container_name: icecast
+    image: ghcr.io/libretime/icecast:2.4.4
+    ports:
+      - "8000:8000"
+    environment:
+      - ICECAST_SOURCE_PASSWORD=source_password_123
+      - ICECAST_ADMIN_PASSWORD=admin_password_123
+      - ICECAST_ADMIN_USERNAME=admin
+      - ICECAST_HOSTNAME=localhost
+
   liquidsoap:
     build: .
-    container_name: liquidsoap-radio
-    restart: unless-stopped
+    container_name: liquidsoap
+    depends_on:
+      - icecast
     ports:
       - "1234:1234"
     volumes:
       - ./storage:/app/storage:ro
     environment:
-      - ICECAST_HOST=192.168.1.12
+      - ICECAST_HOST=icecast
       - ICECAST_PORT=8000
-      - ICECAST_PASSWORD=supersecret
+      - ICECAST_PASSWORD=source_password_123
       - ICECAST_MOUNT=/stream
       - STATION_NAME=RadioStation
       - STATION_DESCRIPTION=RadioStation
